src/App.css
/* ... */
h1 {
  font-size: 3em;
  font-weight: 900;
}
h2 {
  font-size: 2em;
  padding-bottom: 10px;
  font-weight: 600;
  font-family: "Kaushan Script";
}
h3 {
  font-size: 1.33em;
  font-weight: 400;
  padding-bottom: 5px;
}
h4 {
  font-size: .89em;
  font-weight: 200;
}
p {
  line-height: 1.5em;
}
footer p, header p {
  font-size: .75em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
td {
  text-align: left;
  line-height: 1.3em;
  color: #f3ac33;
}
i {
  transition: color .2s ease-in-out;
}
i.fontawesome-contact:hover {
  color: #636363;
}
header {
  /*box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);*/
}

#instagram-window, #text-content {
  /*background: #fff;*/
  background: #222;
  /*background: linear-gradient(#222, #222);*/
  background: #222;
  background: linear-gradient(#222, #222);
  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);
  /*border: 2px solid #fff;*/
}
#contact-expander, #overlay-button, #social {
  background: #222;
  background: linear-gradient(#222, #222);
  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);
  transition: box-shadow .1s ease-in-out;
}
#contact-expander, .social-icon, .fontawesome-contact, #instagram-window {
  color: #fff;
}
#contact-expander:hover, #overlay-button:hover {
  /*background-color: #000;*/
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
  /*animation-name: move-text;*/
  /*animation-duration: 1s;*/
  /*animation-iteration-count: infinite;*/
}

.text-gray, #card {
  color: #fff;
}
.bg-light-gray {
  background-color: #000;
}
.overlay-heading, .table-label {
  color: #fff;
}
#overlay-button {
  color: #fff;
}
.bg-gray, #card {
  background-color: #000;
}
#foot {
  background: #222;
  background: linear-gradient(#222, #222);
  color: #fff;
  margin: 30px 10px;
  border-radius: 8px;
}
.bg-dark-gray {
  background-color: #fff;
}

/*@keyframes move-text {*/
  /*0% {*/
/*background: #222;*/
/*background: linear-gradient(#222, #222);*/
  /*}*/
  /*50% {*/
/*background: #222;*/
/*background: linear-gradient(#222, #222);*/
  /*}*/
  /*100% {*/
/*background: #222;*/
/*background: linear-gradient(#222, #222);*/
  /*}*/
/*}*/
#app-container {
  background-color: #000;
  opacity: 1;
  animation-name: fadeIn;
  animation-duration: 2s;
  animation-iteration-count: 1;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.no-line-height {
  line-height: 0.5em;
}

.ta-center {
  text-align: center;
}

.nav-bar {
  padding: 0 20px;
}

.logo {
  /*animation: App-logo-spin infinite 30s linear;*/
  height: 150px;
  z-index: 10;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.certification-pairs-container {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 30px;
}
.certification-pair {
  margin-right: 30px;
}
.certification-pair p, .certification-pair img {
  display: inline-block;
  vertical-align: middle;
}
.certification-icons {
  height: 45px;
}
/*@keyframes App-logo-spin {*/
  /*from { transform: rotate(0deg); }*/
  /*to { transform: rotate(360deg); }*/
/*}*/

.flex-c {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
#contact-expander {
  width: 100%;
  text-align: center;
  padding: 10px 0;
  border-radius: 8px;
  margin: 10px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
#contact-expander, #overlay-button {
  background: #333;
}
#overlay {
  background-color: rgba(0,0,0,0.8);
  color: #fff;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  padding: 10px;
  /*z-index: 10;*/
  /*display: none;*/
  display: flex;
  opacity: 0;
  z-index: -1;
  justify-content: center;
  align-items: center;
  transition: opacity .2s ease-in-out;
}
tr {
  line-height: 2;
}
.table-label {
  padding-right: 15px;
  padding-bottom: 15px;
  /*margin-bottom:10px;*/
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.overlay-heading {
  padding: 10px 0;
  margin-bottom: 10px;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

}
#card {
  /*background-color: #fff;*/
  padding: 0px 10px;
  border-radius: 8px;
  border: 4px solid #fff;
  transform: translateY(-10px);
  transition: transform .2s ease-in-out;
}
#overlay-button {
  /*position: absolute;*/
  /*bottom: 30px;*/
  /*left: 0;*/
  /*right: 0;*/
  border-radius: 8px;
  margin: 20px 0;
  text-align: center;
  padding: 15px 20px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.w-100 {
  width: 100%;
}
.w-50 {
  width: 50%;
}
.w-33 {
  width: 33.333333333333334%;
}

.w-main {
  width: 61.8%;
}
.w-side {
  width: 38.2%;
}
.d-inline-block {
  display: inline-block;
}
.d-block {
  display: block;
}

.sm-text {
  font-size: 1em;
}
.md-text {
  font-size: 1em;
}
.lg-text {
  font-size: 1em;
}
.vert-pad-10 {
  padding-top: 10px;
  padding-bottom: 10px;
}
.vert-pad-20 {
  padding-top: 10px;
  padding-bottom: 10px;
}
.vert-padding-30 {
  padding-top: 30px;
  padding-bottom: 30px;
}
.hor-pad-10 {
  padding-left: 10px;
  padding-right: 10px;
}
.hor-pad-20 {
  padding-left: 10px;
  padding-right: 10px;
}
.vert-margin {
  margin-top: 30px;
  margin-bottom: 30px;
}
.hor-margin-20 {
  margin-left: 20px;
  margin-right: 20px;
}
.r-margin {
  margin-right: 30px;
}
.margin-zero-auto {
  margin: 0 auto;
}
.text-white {
  color: #fff;
}
.text-light-gray {
  color: #d8d8d8;
}
.text-medium-gray {
  color: #000 !important;
}
.t-align-left {
  text-align: left;
}
.vert-align-top {
  vertical-align: top;
}
.vert-align-middle {
  vertical-align: middle;
}
.b-rad-8{
  border-radius: 8px;
}

.brand-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  background: #000;
  padding: 40px 0 30px 0;
}
.logo {
}
/* ... */

